# EduAI-x0

./: .aider.chat.history.md  .aider.input.history  .replit  Pasted--Cuestionario-para-Clasificaci-n-de-Perfiles-de-Usuario-1-Dimensi-n-Temporal-20-puntos--1729638017478.txt  Pasted--F-rmula-de-Clasificaci-n-python-def-classify-user-responses-scores-estruc-1729639543162.txt  Pasted-Crea-una-plataforma-educativa-llamada-EduAI-Companion-que-tenga-1-SISTEMA-DE-AUTENTICACI-N-P-g-1729614323319.txt  Pasted-Cuestionario-para-Clasificaci-n-de-Perfiles-de-Usuario-1-Dimensi-n-Temporal-20-puntos-1-1-En-qu-1729638584154.txt  Pasted-Implementar-un-sistema-de-aprendizaje-incremental-y-personalizado-utilizando-la-API-de-MistralAI-imp-1729646254520.txt  Pasted-aplica-los-siguientes-puntos-al-chat-de-todos-los-usuarios-1-Preprocesamiento-de-Datos-Antes-1729614436825.txt  README.md  app.py  auth.py  chatbot.py  classMetrica.md  custom (1).css  index (2).html  models.py  pyproject.toml  questionnaire.py  replit.nix
static/css/: custom.css
static/js/: auth.js  dashboard.js  localStorage.js  questionnaire.js
templates/: auth.html  base.html  dashboard.html  index.html  questionnaire.html
